# CMakeDemo

./: README.md  main.cpp
demo1/: CMakeLists.txt  readme.md
demo1/src/: main.cpp
demo2/: CMakeLists.txt  readme.md
demo3/: CMakeLists.txt  readme.md
demo3/src/: main.cpp
demo4/: CMakeLists.txt  readme.md
demo4/src/: main.cpp
demo5/: CMakeLists.txt  main.cpp
demo6/: CMakeLists.txt  main.cpp
demo7/: CMakeLists.txt  main.cpp
